--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "test": "ng test",
+    "test": "jest",
     "lint": "ng lint",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
     "e2e": "ng e2e"
   },
   "private": true,
