--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "~11.0.3",
     "@briebug/jest-schematic": "^3.1.0",
     "bootstrap": "^5.0.0-beta1",
+    "jest-preset-angular": "^8.3.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
